# GestureRecognition

./: README.md  alembic.ini  gesture_app.db  main.py  project.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 14b9b315b99e_initial_migration.py
app/: database.py  gestures.py  main.py  models.py
app/static/css/: style.css
app/static/js/: main.js  product.js
app/templates/: index.html  product.html
