[project]
name = "gesture-req-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "mediapipe==0.10.11",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]
